k8s/kubernets/app/php.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: php7-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-php7
    spec:
      containers:
      - name: nginx-php7
        image: skiychan/nginx-php7
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-php7-service
  namespace: default
  labels:
    app: nginx-php7
spec:
  ports:
  - name: nginx-php7
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: nginx-php7
  # Minikube needs NodePort to work.
  # type: ClusterIP
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-php7-service
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: php7.fanjian8.com
    http:
      paths:
      - backend:
          serviceName: nginx-php7-service
          servicePort: 80
