k8s/kubernets/app/rancher.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rancher-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rancher
    spec:
      containers:
      - name: rancher
        image: rancher/rancher:v2.2.2
        volumeMounts:
        - name: rancher-home
          mountPath: /var/lib/rancher
        ports:
        - containerPort: 80
          name: web
        - containerPort: 443
          name: https
      volumes:
        - name: rancher-home
          hostPath:
            path: /k8s_data/rancher    
---
kind: Service
apiVersion: v1
metadata:
  name: rancher-service
  namespace: default
  labels:
    app: rancher
spec:
  ports:
  - name: rancher
    protocol: TCP
    port: 80
    targetPort: 80
  - name: rancher-https
    protocol: TCP
    port: 443
    targetPort: 443
  selector:
    app: rancher
  # Minikube needs NodePort to work.
  # type: ClusterIP
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rancher-service
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: rancher.hi-coffice.com
    http:
      paths:
      - backend:
          serviceName: rancher-service
          servicePort: 80
